add github icon and joined tag

--- a/team.html
+++ b/team.html
@@ -150,12 +150,11 @@
                 <div class="text">
                   <h3>Heitor Rapela</h3>
                   <p>MSc Student in Computer Science</p>
-
-
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/heitorrapela"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
-
 
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
@@ -165,14 +164,11 @@
                 <div class="text">
                   <h3>João Gabriel</h3>
                   <p>MSc Student in Computer Science</p>
-                  <p> </p>
-                  <p> </p>
-
-
+                  <p>Joined 2017</p>
+                  <a href="https://github.com/BrielMachado"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
-
 
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
@@ -182,14 +178,13 @@
                 <div class="text">
                   <h3>Raphael Brito</h3>
                   <p>MSc Student in Computer Science</p>
-
-
+                  <p>Joined 2017</p>
+                  <a href="https://github.com/RaphaBrito"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
 
             <div class="clearfix visible-sm-block visible-xs-block"></div>
-
           </div>
           <!--
           Carlos Pena
@@ -222,6 +217,8 @@
                 <div class="text">
                   <h3>Carlos Pena</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/CarlosPena00"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -234,6 +231,8 @@
                 <div class="text">
                   <h3>Cecília Virgínia</h3>
                   <p>Undergraduate Mechanical Engineering</p>
+                  <p>Joined 2018</p>
+                  <a href="https://github.com/cvss"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -246,6 +245,8 @@
                 <div class="text">
                   <h3>Cristiano Oliveira</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/cstiano"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -261,6 +262,8 @@
                 <div class="text">
                   <h3>David Riff</h3>
                   <p>Undergraduate Electronic Engineering</p>
+                  <p>Joined 2017</p>
+                  <a href="https://github.com/davidrft"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -273,6 +276,8 @@
                 <div class="text">
                   <h3>Felipe Martins</h3>
                   <p>Undergraduate Mechanical Engineering</p>
+                  <p>Joined 2018</p>
+                  <a href="https://github.com/FelipeMartins96"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -285,6 +290,8 @@
                 <div class="text">
                   <h3>José Douglas</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2018</p>
+                  <a href="https://github.com/Douglas19992"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -301,6 +308,8 @@
                <div class="text">
                  <h3>João Amaro</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2018</p>
+                 <a href="https://github.com/joaoaab"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -313,6 +322,8 @@
                <div class="text">
                  <h3>João Lucas</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2017</p>
+                 <a href="https://github.com/jlocx"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -325,6 +336,8 @@
                <div class="text">
                  <h3>Juliana Damurie</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2017</p>
+                 <a href="https://github.com/JulianaDamurie"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -340,6 +353,8 @@
                 <div class="text">
                   <h3>Júnior Lima</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/Juniorlimaivd"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -352,6 +367,8 @@
                 <div class="text">
                   <h3>Lucas Cavalcanti</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/lhcavalcanti"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -364,6 +381,8 @@
                 <div class="text">
                   <h3>Lucas Maggi</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2017</p>
+                  <a href="https://github.com/lomcin"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -379,6 +398,7 @@
                 <div class="text">
                   <h3>Lucas Santana</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2018</p>
                 </div>
               </div>
             </div>
@@ -391,6 +411,8 @@
                 <div class="text">
                   <h3>Mariana Barros</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2018</p>
+                  <a href="https://github.com/Mariana-Barros"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -403,6 +425,8 @@
                 <div class="text">
                   <h3>Marvson Allan</h3>
                   <p>Undergraduate Computer Engineering</p>
+                  <p>Joined 2016</p>
+                  <a href="https://github.com/marvson"target="blank"><i class="icon-github2"></i></a>
                 </div>
               </div>
             </div>
@@ -418,6 +442,8 @@
                <div class="text">
                  <h3>Mateus Gonçalves</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2017</p>
+                 <a href="https://github.com/goncamateus"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -430,6 +456,8 @@
                <div class="text">
                  <h3>Renato Sousa</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2016</p>
+                 <a href="https://github.com/renatoosousa"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -442,6 +470,8 @@
                <div class="text">
                  <h3>Roberto Fernandes</h3>
                  <p>Undergraduate Computer Engineering</p>
+                 <p>Joined 2016</p>
+                 <a href="https://github.com/bebetocf"target="blank"><i class="icon-github2"></i></a>
                </div>
              </div>
            </div>
@@ -458,6 +488,8 @@
                  <div class="text">
                    <h3>Vinicius Bezerra</h3>
                    <p>Undergraduate Computer Engineering</p>
+                   <p>Joined 2016</p>
+                   <a href="https://github.com/vbsilva"target="blank"><i class="icon-github2"></i></a>
                  </div>
                </div>
              </div>
@@ -470,6 +502,8 @@
               <div class="text">
                 <h3>Walber Macedo</h3>
                 <p>Undergraduate Computer Engineering</p>
+                <p>Joined 2018</p>
+                <a href="https://github.com/walbermr"target="blank"><i class="icon-github2"></i></a>
               </div>
             </div>
           </div>
