--- a/workshop.html
+++ b/workshop.html
@@ -219,6 +219,26 @@
         </div>
       </section>
 
+      <section class="probootstrap-section" id="workshopscratch">
+        <div class="container">
+          <div class="row">
+            <div style="width:100%;">
+                <div class="probootstrap-service-2  probootstrap-animate">
+                <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
+                <div class="text">
+                  <h3>Material of Workshop : Scratch</h3>
+                  <p></p>
+                  <p> 1. <a href="archives/Workshop CECINE.pdf" target="blank">Slide</a> of Presentation </p>
+                  <p> 2. <a href="archives/SeguidorWorkshopCecine.sb2" target="blank">Practice</a> Material </p>
+                  <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
+                </div>
+                </div>
+            
+            </div>
+          </div>
+        </div>
+      </section>
+
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
