update workshop scrach

--- a/workshop.html
+++ b/workshop.html
@@ -229,7 +229,7 @@
                   <h3>Material of Workshop : Scratch</h3>
                   <p></p>
                   <p> 1. <a href="archives/Workshop CECINE.pdf" target="blank">Slide</a> of Presentation </p>
-                  <p> 2. <a href="archives/SeguidorWorkshopCecine.sb2" target="blank">Practice</a> Material </p>
+                  <p> 2. <a href="https://scratch.mit.edu/projects/247911016/" target="blank">Practice</a> Material </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
