adicionando novas áreas workshop

--- a/workshop.html
+++ b/workshop.html
@@ -123,24 +123,31 @@
             <div style="width:350%;">
               <div class="probootstrap-flex-block">
                 <div class="probootstrap-text probootstrap-animate">
-                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
-                      <h3 style="text-align: center;">Artificial Intelligence</h3>
+                    <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">A.I.</h3>
                       <p></p>
-                      <img src="img/stg.png" alt="" width="80%" style=" display: block;margin-left: auto;margin-right: auto;" >
+                      <img src="img/stg.png" alt="" width="70%" style=" display: block;margin-left: auto;margin-right: auto;" >
                       <p></p>
                       <p  style="text-align: center;" ><a href="#workshopia" class="btn btn-primary">Material</a></p>
                     </div>
-                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
-                      <h3 style="text-align: center;">Robot</h3>
+                    <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Mecânica</h3>
                       <p></p>
-                      <img src="img/robotic.png" alt="" width="80%"  style=" display: block;margin-left: auto;margin-right: auto;">
+                      <img src="img/robotic.png" alt="" width="70%"  style=" display: block;margin-left: auto;margin-right: auto;">
                       <p></p>
                       <p  style="text-align: center;" ><a href="#workshoprt" class="btn btn-primary">Material</a></p>
                     </div>
-                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
-                      <h3 style="text-align: center;">Computer Vision</h3>
+                    <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Eletronic</h3>
                       <p></p>
-                      <img src="img/vision.png" alt="" width="80%"  style=" display: block;margin-left: auto;margin-right: auto;">
+                      <img src="img/robotic.png" alt="" width="70%"  style=" display: block;margin-left: auto;margin-right: auto;">
+                      <p></p>
+                      <p  style="text-align: center;" ><a href="#workshoprt" class="btn btn-primary">Material</a></p>
+                    </div>
+                    <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Vision</h3>
+                      <p></p>
+                      <img src="img/vision.png" alt="" width="70%"  style=" display: block;margin-left: auto;margin-right: auto;">
                       <p></p>
                       <p  style="text-align: center;" ><a href="#workshopcv" class="btn btn-primary">Material</a></p>
                     </div>
