--- a/workshop.html
+++ b/workshop.html
@@ -131,7 +131,7 @@
                       <p  style="text-align: center;" ><a href="#workshopia" class="btn btn-primary">Material</a></p>
                     </div>
                     <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
-                      <h3 style="text-align: center;">Mecânica</h3>
+                      <h3 style="text-align: center;">Mechanic</h3>
                       <p></p>
                       <img src="img/robotic.png" alt="" width="70%"  style=" display: block;margin-left: auto;margin-right: auto;">
                       <p></p>
@@ -142,7 +142,7 @@
                       <p></p>
                       <img src="img/robotic.png" alt="" width="70%"  style=" display: block;margin-left: auto;margin-right: auto;">
                       <p></p>
-                      <p  style="text-align: center;" ><a href="#workshoprt" class="btn btn-primary">Material</a></p>
+                      <p  style="text-align: center;" ><a href="#workshopel" class="btn btn-primary">Material</a></p>
                     </div>
                     <div style="width: 20%;float: left;padding-right:5%;padding-left:5%">
                       <h3 style="text-align: center;">Vision</h3>
@@ -188,7 +188,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material of Workshop : Robot</h3>
+                  <h3>Material of Workshop : Mechanic</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
@@ -205,6 +205,32 @@
           </div>
         </div>
       </section>
+
+      <section class="probootstrap-section" id="workshopel">
+        <div class="container">
+          <div class="row">
+            <div style="width:100%;">
+                <div class="probootstrap-service-2  probootstrap-animate">
+                <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
+                <div class="text">
+                  <h3>Material of Workshop : Eletronic</h3>
+                  <p></p>
+                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
+                  <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
+                  <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
+                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
+                  <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
+                  <p> 6. <a href="http://wiki.robocup.org/Small_Size_League/RoboCup_2016/Teams" target="blank"> TDP </a> SSL </p>
+                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPs </a> Search </p>
+                  <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
+                </div>
+                </div>
+            
+            </div>
+          </div>
+        </div>
+      </section>
+
 
       <section class="probootstrap-section" id="workshopcv">
         <div class="container">
