mudando de workshop para projects

--- a/workshop.html
+++ b/workshop.html
@@ -101,7 +101,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="workshop.html">Workshop</a></li>
+              <li><a href="workshop.html">Projects</a></li>
             </ul>
           </div>
         </div>
@@ -111,7 +111,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
-              <h1>Workshops</h1>
+              <h1>Projects</h1>
             </div>
           </div>
         </div>
