--- a/workshop.html
+++ b/workshop.html
@@ -165,7 +165,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material of Workshop : Artificial Intelligence</h3>
+                  <h3>Material : Artificial Intelligence</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkstg6353447492383.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >V-REP </a> Download</p>
@@ -188,7 +188,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material of Workshop : Mechanic</h3>
+                  <h3>Material : Mechanic</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
@@ -213,7 +213,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material of Workshop : Eletronic</h3>
+                  <h3>Material: Eletronic</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
@@ -239,7 +239,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material of Workshop : Computer Vision</h3>
+                  <h3>Material: Computer Vision</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkvis73836380298372.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="archives/MaterialPratico.zip" target="blank">Practice</a> Material </p>
