--- a/workshop.html
+++ b/workshop.html
@@ -167,11 +167,11 @@
                 <div class="text">
                   <h3>Material : Artificial Intelligence</h3>
                   <p></p>
-                  <p> 1. <a href="archives/wkstg6353447492383.pdf" target="blank">Slide</a> of Presentation </p>
-                  <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >V-REP </a> Download</p>
-                  <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >V-REP </a> Example</p>
+                  <p> 1. <a href="archives/ia/IA-projec-guide.pdf" target="blank">Project Specification</a></p>
+                  <p> 1. <a href="https://github.com/robocin/vss-simulator" target="blank">New Simulator Tutorial</a></p>
+                  <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >Old Simulator - V-REP </a> Download</p>
+                  <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >Old Simulator - V-REP </a> Example</p>
                   <p> 4. <a href="http://home.ifi.uio.no/paalh/dataset/alfheim/" target="blank" >Dataset </a>Soccer Video and Player Position</p>
-                  <p> 5. <a href="https://github.com/rcsoccersim/" target="blank" >Simulator 2D </a>Download</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material : Mechanic</h3>
+                  <h3>Material : Mechanics</h3>
                   <p></p>
                   <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
                   <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
@@ -213,15 +213,13 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material: Eletronic</h3>
+                  <h3>Material: Electronic</h3>
                   <p></p>
-                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
-                  <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
-                  <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
-                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
-                  <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
-                  <p> 6. <a href="http://wiki.robocup.org/Small_Size_League/RoboCup_2016/Teams" target="blank"> TDP </a> SSL </p>
-                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPs </a> Search </p>
+                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Project Specification</a></p>
+                  <p> 2. <a href="archives/electronic/MainBoard_project.sch" target="blank">Schematic Example</a></p>
+                  <p> 3. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Eagle Tutorial</a> Video</p>
+                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a>Using EAGLE: Schematic </p>
+                  <p> 5. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a>Using EAGLE: Board Layout </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -241,8 +239,8 @@
                 <div class="text">
                   <h3>Material: Computer Vision</h3>
                   <p></p>
-                  <p> 1. <a href="archives/wkvis73836380298372.pdf" target="blank">Slide</a> of Presentation </p>
-                  <p> 2. <a href="archives/MaterialPratico.zip" target="blank">Practice</a> Material </p>
+                  <p> 1. <a href="archives/vision/vision-RobôCIn-2017.pdf" target="blank">Project Slide</a></p>
+                  <p> 2. <a href="archives/vision/vision.zip" target="blank">Project Mateiral</a></p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
