updating mateiral for 2018 contest

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
                 <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
                 <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                <li><a href="#"><i class="icon-github"></i></a></li>
+                <li><a href="https://www.github.com/robocin/"><i class="icon-github"></i></a></li>
                 <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
@@ -109,20 +109,26 @@
         </div>
       </nav>
 
+      
       <section class="flexslider">
         <ul class="slides">
-          <li style="background-image: url(img/slider_4.jpg)" class="overlay">
+          <li style="background-image: url(img/equipe_2018.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                  <div class="probootstrap-slider-text ">
-                  	<br/>
-                  	<br/>
-                  	<br/>
-                  	<br/>
-                  	<br/>
-                  	<br/>
-                    <center><h1 class="probootstrap-heading probootstrap-animate">Link : <a href="https://goo.gl/forms/1g0EpNCkB5xslwxm1" style="color: white" > clique aqui</a></h1></center>
+                  <div class="probootstrap-slider-text text-center">
+                    <h1 class="probootstrap-heading probootstrap-animate">Meet RobôCIn</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li style="background-image: url(img/bandeira_2018.JPG)" class="overlay">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                  <div class="probootstrap-slider-text text-center">
+                    <h1 class="probootstrap-heading probootstrap-animate">Find Goals</h1>
                   </div>
                 </div>
               </div>
@@ -207,7 +213,7 @@
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="25" data-speed="2000" data-refresh-interval="50">1</span>
+                    <span class="js-counter" data-from="0" data-to="26" data-speed="2000" data-refresh-interval="50">1</span>
                   </span>
                   <span class="probootstrap-counter-label">Students Involved</span>
                 </div>
@@ -220,7 +226,7 @@
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="2" data-speed="2000" data-refresh-interval="50">1</span>
+                    <span class="js-counter" data-from="0" data-to="3" data-speed="2000" data-refresh-interval="50">1</span>
                   </span>
                   <span class="probootstrap-counter-label">Professors Involved</span>
                 </div>
@@ -234,7 +240,7 @@
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50">1</span> 
+                    <span class="js-counter" data-from="0" data-to="3" data-speed="1000" data-refresh-interval="50">1</span> 
                   </span>
                   <span class="probootstrap-counter-label">Years</span>
                 </div>
@@ -248,7 +254,7 @@
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="1" data-speed="1000" data-refresh-interval="50">1</span>
+                    <span class="js-counter" data-from="0" data-to="4" data-speed="1000" data-refresh-interval="50">1</span>
                   </span>
                   <span class="probootstrap-counter-label">Categories</span>
                 </div>
@@ -336,7 +342,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="workshop.html">Workshop</a></li>
+                  <li><a href="workshop.html">Projects</a></li>
                 </ul>
               </div>
             </div>
