--- a/vsss.html
+++ b/vsss.html
@@ -48,7 +48,7 @@
                 <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
                 <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
                 <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                <li><a href="#"><i class="icon-github"></i></a></li>
+                <li><a href="https://www.github.com/robocin/"><i class="icon-github"></i></a></li>
                 <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
                 <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
               </ul>
@@ -99,7 +99,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="workshop.html">Workshop</a></li>
+              <li><a href="workshop.html">Projects</a></li>
             </ul>
           </div>
         </div>
@@ -171,7 +171,7 @@
                 <ul class="probootstrap-footer-social">
                   <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
                   <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                  <li><a href="#"><i class="icon-github"></i></a></li>
+                  <li><a href="https://www.github.com/robocin/"><i class="icon-github"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -184,7 +184,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="workshop.html">Workshop</a></li>
+                  <li><a href="workshop.html">Projects</a></li>
                 </ul>
               </div>
             </div>
