--- a/team.html
+++ b/team.html
@@ -90,7 +90,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
-              <li><a href="workshop.html">Workshop</a></li>
+              <li><a href="workshop.html">Projects</a></li>
             </ul>
           </div>
         </div>
@@ -623,7 +623,7 @@
                 <ul class="probootstrap-footer-social">
                   <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
                   <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                  <li><a href="#"><i class="icon-github"></i></a></li>
+                  <li><a href="https://www.github.com/robocin/"><i class="icon-github"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -636,7 +636,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="workshop.html">Workshop</a></li>
+                  <li><a href="workshop.html">Projects</a></li>
                 </ul>
               </div>
             </div>
