--- a/workshop.html
+++ b/workshop.html
@@ -165,13 +165,14 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material : Artificial Intelligence</h3>
+                  <h3>Artificial Intelligence</h3>
                   <p></p>
-                  <p> 1. <a href="archives/ia/IA-projec-guide.pdf" target="blank">Project Specification</a></p>
-                  <p> 1. <a href="https://github.com/robocin/vss-simulator" target="blank">New Simulator Tutorial</a></p>
-                  <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >Old Simulator - V-REP </a> Download</p>
-                  <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >Old Simulator - V-REP </a> Example</p>
-                  <p> 4. <a href="http://home.ifi.uio.no/paalh/dataset/alfheim/" target="blank" >Dataset </a>Soccer Video and Player Position</p>
+                  <p> 1. <a href="archives/ia/IA-project.pdf" target="blank">Project Specification</a></p>
+                  <p> 2. <a href="https://github.com/robocin/vss-simulator" target="blank">Simulator Tutorial</a> RobôCin Project for 2018</p>
+                  <p> 3. <a href="archives/ia/ia-references.zip" target="blank">Papers Reference</a> Papers with interesting algorithms</p>
+                  <p> 4. <a href="https://github.com/robocin/vrep-example" target="blank" >Simulator - V-REP </a> RobôCin Project for 2017</p>
+                  <p> 5. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
+                  
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -188,15 +189,12 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material : Mechanics</h3>
+                  <h3>Mechanics</h3>
                   <p></p>
-                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
-                  <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
-                  <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
-                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
-                  <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
-                  <p> 6. <a href="http://wiki.robocup.org/Small_Size_League/RoboCup_2016/Teams" target="blank"> TDP </a> SSL </p>
-                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPs </a> Search </p>
+                  <p> 1. <a href="archives/mechanic/inventor_download.pdf" target="blank">Software Download</a> How to obtain Autodesk Inventor </p>
+                  <p> 5. <a href="" target="blank">Tutorial Inventor </a> AVAILABLE SOON </p>
+                  <p> 6. <a href="" target="blank"> Pieces to Design </a> AVAILABLE SOON </p>
+                  <p> 4. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -213,13 +211,14 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material: Electronic</h3>
+                  <h3>Electronic</h3>
                   <p></p>
-                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Project Specification</a></p>
-                  <p> 2. <a href="archives/electronic/MainBoard_project.sch" target="blank">Schematic Example</a></p>
-                  <p> 3. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Eagle Tutorial</a> Video</p>
-                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a>Using EAGLE: Schematic </p>
-                  <p> 5. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a>Using EAGLE: Board Layout </p>
+                  <p> 1. <a href="archives/electronic/electronic-project.pdf" target="blank">Project Specification</a></p>
+                  <p> 2. <a href="archives/electronic/MainBoard_project.zip" target="blank">Schematic Example</a></p>
+                  <p> 3. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" > Eagle Tutorial</a> Video</p>
+                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a> Using EAGLE: Schematic </p>
+                  <p> 5. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a> Using EAGLE: Board Layout </p>
+                  <p> 6. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -237,10 +236,11 @@
                 <div class="probootstrap-service-2  probootstrap-animate">
                 <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
                 <div class="text">
-                  <h3>Material: Computer Vision</h3>
+                  <h3>Computer Vision</h3>
                   <p></p>
                   <p> 1. <a href="archives/vision/vision-RobôCIn-2017.pdf" target="blank">Project Slide</a></p>
                   <p> 2. <a href="archives/vision/vision.zip" target="blank">Project Mateiral</a></p>
+                  <p> 3. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -250,12 +250,12 @@
         </div>
       </section>
 
-      <section class="probootstrap-section" id="workshopscratch">
+      <!-- <section class="probootstrap-section" id="workshopscratch">
         <div class="container">
           <div class="row">
             <div style="width:100%;">
                 <div class="probootstrap-service-2  probootstrap-animate">
-                <!--  <div class="text-uppercase probootstrap-uppercase">Featured Events</div> -->
+                <div class="text-uppercase probootstrap-uppercase">Featured Events</div>
                 <div class="text">
                   <h3>Material of Workshop : Scratch</h3>
                   <p></p>
@@ -268,7 +268,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
@@ -281,7 +281,7 @@
                 <ul class="probootstrap-footer-social">
                   <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
                   <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                  <li><a href="#"><i class="icon-github"></i></a></li>
+                  <li><a href="https://www.github.com/robocin/"><i class="icon-github"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -294,7 +294,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
-                  <li><a href="workshop.html">Workshop</a></li>
+                  <li><a href="workshop.html">Projects</a></li>
                 </ul>
               </div>
             </div>
