--- a/workshop.html
+++ b/workshop.html
@@ -171,7 +171,7 @@
                   <p> 2. <a href="https://github.com/robocin/vss-simulator" target="blank">Simulator Tutorial</a> RobôCin Project for 2018</p>
                   <p> 3. <a href="archives/ia/ia-references.zip" target="blank">Papers Reference</a> Papers with interesting algorithms</p>
                   <p> 4. <a href="https://github.com/robocin/vrep-example" target="blank" >Simulator - V-REP </a> RobôCin Project for 2017</p>
-                  <p> 5. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
+                  <p> 5. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS TDPs </a> Reference of RobôCIn VSS project for 2016, 2017 and 2018</p>
                   
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
@@ -191,10 +191,9 @@
                 <div class="text">
                   <h3>Mechanics</h3>
                   <p></p>
-                  <p> 1. <a href="archives/mechanic/inventor_download.pdf" target="blank">Software Download</a> How to obtain Autodesk Inventor </p>
-                  <p> 5. <a href="" target="blank">Tutorial Inventor </a> AVAILABLE SOON </p>
-                  <p> 6. <a href="" target="blank"> Pieces to Design </a> AVAILABLE SOON </p>
-                  <p> 4. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
+                  <p> 1. <a href="archives/mechanic/projeto_mechanics.pdf" target="blank">Project Specification </a> Feel free to use your imagination in this project </p>
+                  <p> 2. <a href="archives/mechanic/inventor_tutorial.pdf" target="blank">Software Guide</a> How to obtain and use Autodesk Inventor </p>
+                  <p> 3. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS TDPs </a> Reference of RobôCIn VSS projects in 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -218,7 +217,7 @@
                   <p> 3. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" > Eagle Tutorial</a> Video</p>
                   <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a> Using EAGLE: Schematic </p>
                   <p> 5. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Eagle Tutorial</a> Using EAGLE: Board Layout </p>
-                  <p> 6. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
+                  <p> 6. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS TDPs </a> Reference of RobôCIn VSS project for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -240,7 +239,7 @@
                   <p></p>
                   <p> 1. <a href="archives/vision/vision-RobôCIn-2017.pdf" target="blank">Project Slide</a></p>
                   <p> 2. <a href="archives/vision/vision.zip" target="blank">Project Mateiral</a></p>
-                  <p> 3. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS Papers </a> Team Description Paper for 2016, 2017 and 2018</p>
+                  <p> 3. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS TDPs </a> Reference of RobôCIn VSS project for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
