fix slide of vision

--- a/workshop.html
+++ b/workshop.html
@@ -237,7 +237,7 @@
                 <div class="text">
                   <h3>Computer Vision</h3>
                   <p></p>
-                  <p> 1. <a href="archives/vision/vision-RobôCIn-2017.pdf" target="blank">Project Slide</a></p>
+                  <p> 1. <a href="archives/vision/vision-2017.pdf" target="blank">Project Slide</a></p>
                   <p> 2. <a href="archives/vision/vision.zip" target="blank">Project Mateiral</a></p>
                   <p> 3. <a href="https://drive.google.com/drive/folders/1QwKlJ0shd9xRbZCAeIsXD86GI1JZsFUW?usp=sharing" target="blank">RobôCIn VSS TDPs </a> Reference of RobôCIn VSS project for 2016, 2017 and 2018</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
