update index to show video of team

--- a/index.html
+++ b/index.html
@@ -115,10 +115,9 @@
 		<div class="container">
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" >
 				<h2>About us</h2>
-				<video width="100%" height="auto" controls>
-				  <source src="https://www.youtube.com/watch?v=_c9QNyWlv7k" type="video/mp4">
-				  Your browser does not support the video tag.
-				</video>
+				<iframe width="100%" height="auto"
+					src="https://www.youtube.com/watch?v=_c9QNyWlv7k">
+				</iframe>
 			</div>
 			
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
