--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
 		<div class="container">
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" >
 				<h2>About us</h2>
-				<iframe width="100%" height="auto"
-					src="https://www.youtube.com/watch?v=_c9QNyWlv7k">
-				</iframe>
+				<iframe width="100%" height="300px" src="https://www.youtube.com/embed/_c9QNyWlv7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<div class="col-md-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" >
