Adding 2019 partners and update home style

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <div class="row slide-margin">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2 class="animation animated-item-1">Welcome to RobôCIn </h2>
-                                    <a class="btn-slide animation animated-item-3" href="#">Meet Us</a>
+                                    <h2 class="animation animated-item-1">Welcome to RobôCIn!</h2>
+                                    <!-- <a class="btn-slide animation animated-item-3" href="#">Meet Us</a> -->
                                 </div>
                             </div>
 
@@ -171,9 +171,10 @@
             <div class="partners">
                 <ul>
                     <li> <a href="https://www2.cin.ufpe.br/site/index.php" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/cin.png"></a></li>
-                    <li> <a href="https://www.cetene.gov.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/cetene.png"></a></li>
-                    <li> <a href="http://www.cetene.gov.br/lincs" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/lincs.png"></a></li>
-                    <li> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/lierre.png"></a></li>
+                    <li> <a href="https://inloco.com.br/pt/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/inloco.png"></a></li>
+                    <li> <a href="https://www.informa.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/informa.png"></a></li>
+					<li> <a href="http://www.hsbs.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/HSBS.png"></a></li>
+					<li> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/lierre.png"></a></li>
                 </ul>
             </div>        
         </div><!--/.container-->
@@ -196,7 +197,7 @@
 				
 				<div class="col-md-4 col-md-offset-4">
 					<div class="copyright">
-						&copy; December  2018 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
+						&copy; December  2018 by Bootstrap Themes. All Rights Reserved.
 					</div>
                     <!-- 
                         All links in the footer should remain intact. 
