Updating responsive layout for partners

--- a/index.html
+++ b/index.html
@@ -166,63 +166,63 @@
         <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Our Partners</h2>
-            </div>    
+            </div>
 
             <div class="partners">
                 <ul>
-                    <li> <a href="https://www2.cin.ufpe.br/site/index.php" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/cin.png"></a></li>
-                    <li> <a href="https://inloco.com.br/pt/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/inloco.png"></a></li>
-                    <li> <a href="https://www.informa.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/informa.png"></a></li>
-					<li> <a href="http://www.hsbs.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/HSBS.png"></a></li>
-					<li> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/lierre.png"></a></li>
+                    <li> <a href="https://www2.cin.ufpe.br/site/index.php" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/cin.png" width=100%></a></li>
+                    <li> <a href="https://inloco.com.br/pt/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/inloco.png" width=100%></a></li>
+                    <li> <a href="https://www.informa.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/informa.png" width=100%></a></li>
+	                  <li> <a href="http://www.hsbs.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/HSBS.png" width=100%></a></li>
+	                  <li> <a href="https://lierretextil.com.br/" target="blank"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/lierre.png" width=100%></a></li>
                 </ul>
-            </div>        
+            </div>
         </div><!--/.container-->
     </section><!--/#partner-->
-	
-	
+
+
 	<footer>
 		<div class="footer">
 			<div class="container">
 				<div class="social-icon">
 					<div class="col-md-4">
-						<ul class="social-network"> 
+						<ul class="social-network">
 							<li><a href="https://www.facebook.com/robocin/" target="blank" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="https://www.instagram.com/robocinufpe/" target="blank" class=" tool-tip" title="Instagram"><i class="fa fa-instagram"></i></a></li>
 							<li><a href="https://github.com/robocin" class="tool-tip" target="blank" title="GitHub"><i class="fa fa-github"></i></a></li>
 							<li><a href="https://www.youtube.com/watch?v=_c9QNyWlv7k" target="blank" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-						</ul>	
+						</ul>
 					</div>
 				</div>
-				
+
 				<div class="col-md-4 col-md-offset-4">
 					<div class="copyright">
 						&copy; December  2018 by Bootstrap Themes. All Rights Reserved.
 					</div>
-                    <!-- 
-                        All links in the footer should remain intact. 
+                    <!--
+                        All links in the footer should remain intact.
                         Licenseing information is available at: http://bootstraptaste.com/license/
                         You can buy this theme without footer links online at: http://bootstraptaste.com/buy/?theme=Company
                     -->
-				</div>						
+				</div>
 			</div>
-			
+
 			<div class="pull-right">
 				<a href="#home" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
-			</div>		
+			</div>
 		</div>
 	</footer>
 
-	
-	
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="js/jquery-2.1.1.min.js"></script>	
+	<script src="js/jquery-2.1.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.prettyPhoto.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>  
+    <script src="js/jquery.isotope.min.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/functions.js"></script>
-	
+
   </body>
 </html>
